# wie

./: .gitignore  CMakeLists.txt  loc.sh  testing-todo
bench/: CMakeLists.txt  alloc.h  bench.cpp  pool_alloc.h  priority_queue.h
cmake/: GoogleBenchmark.cmake  GoogleTest.cmake
sandbox/: CMakeLists.txt  main.cpp
src/: buddy_allocator.h  counting_allocator.h  page_allocator.h  pool.h  rc.h  singly_linked_list.h  vec.h
src/container/: binary_heap.hpp  bucket_queue.hpp  container_concepts.hpp  eager_segment_tree.hpp  fenwick_tree.hpp  fibonaci_heap.hpp  kary_heap.hpp  lazy_segment_tree.hpp  vector.hpp
src/memory/: AllocatorReference.hpp  AllocatorTraits.hpp  BuddyAllocator.hpp  BuddyResource.hpp  FlexibleBitset.hpp  FlexibleLayout.hpp  FreelistPool.hpp  Mallocator.hpp  PageAllocator.cpp  PageAllocator.hpp  PolyAllocator.hpp  SharedBlock.hpp  UseCounter.hpp  align.hpp  pages.cpp  pages.hpp
src/type_traits/: trivially_destructible_after_move.hpp
test/: CMakeLists.txt  buddy_allocator.cpp  counting_allocator.cpp  example.cpp  flexible_bitset.cpp  main.cpp  page_allocator.cpp  pool.cpp  rc.cpp  singly_linked_list.cpp  tail_allocator.cpp  vec.cpp
test/container/: binary_heap.cpp  bucket_queue.cpp  eager_segment_tree.cpp  fenwick_tree.cpp  fibonaci_heap.cpp  kary_heap.cpp  lazy_segment_tree.cpp
test/container/competition/: copyable.cpp  immutable.cpp  insertion.cpp  moveable.cpp  my_container.hpp  ordered.cpp  queue_like.cpp  random_access.cpp  range.cpp  set_like.cpp  stack_like.cpp
test/memory/: buddy_allocator.cpp  mallocator.cpp  poly_allocator.cpp
